[package]
name = "zero-to-prod"
version = "0.1.0"
edition = "2021"
authors = ["satwanjyu <satwanjyu@outlook.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero-to-prod"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.75"
argon2 = { version = "0.5.2", features = ["std"] }
base64 = "0.21.4"
chrono = "0.4.31"
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
htmlescape = "0.3.1"
linkify = "0.10.0"
rand = { version = "0.8.5", features = ["std_rng"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.171", features = ["derive"] }
serde-aux = "4.2.0"
sqlx = { version = "0.7.1", features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.6"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = [
  "registry",
  "env-filter",
] }
unicode-segmentation = "1.10.1"
urlencoding = "2.1.3"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
validator = "0.16.1"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.8.0", features = ["redis-rs-tls-session"] }
actix-web-lab = "0.19"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
claims = "0.7.1"
fake = "2.8.0"
once_cell = "1.18.0"
serde_json = "1.0.105"
wiremock = "0.5.19"
serde_urlencoded = "0.7.1"
